# termos

./: .gitignore  CMakeLists.txt  Makefile
cross_compiler/: check_dependencies.sh  download_and_build.sh
kernel/: CMakeLists.txt  entry_point.cpp  i386.S  i386.c  i386.h  io.c  io.cpp  io.h  kmain.c  kprintf.c  kprintf.h  kstdlib.c  kstdlib.h  linker.ld  multiboot.h  processor.c  processor.h  types.h  vga.c  vga.cpp  vga.h
kernel/boot/: boot.S
kernel/debug/: log.c  log.h
kernel/klibc/: stdarg.h  stdbool.h  stdint.h  stdlib.c  stdlib.h
kernel/x86/: descriptors.c  descriptors.h
