cmake_minimum_required(VERSION 3.16)
project(TermOS C ASM)

set(CROSS_COMPILER_BIN ${CMAKE_SOURCE_DIR}/cross_compiler/bin/bin)
set(CROSS_COMPILER_PREFIX ${CROSS_COMPILER_BIN}/i686-elf-)

set(CMAKE_C_COMPILER ${CROSS_COMPILER_PREFIX}gcc)
set(CMAKE_CXX_COMPILER ${CROSS_COMPILER_PREFIX}g++)
set(CMAKE_ASM_COMPILER ${CROSS_COMPILER_PREFIX}gcc)
set(CMAKE_LINKER ${CROSS_COMPILER_PREFIX}ld)
set(CMAKE_RANLIB ${CROSS_COMPILER_PREFIX}ranlib)
set(CMAKE_STRIP ${CROSS_COMPILER_PREFIX}strip)
set(CMAKE_AR ${CROSS_COMPILER_PREFIX}ar)

add_subdirectory(kernel)
